--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.WigsApplicationn"
         tools:targetApi="31">
         <activity
-            android:name=".activity.Login"
+            android:name=".activity.LoginActivity"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:exported="true" >
             <intent-filter>
@@ -25,12 +25,22 @@
         </activity>
 
         <activity
-            android:name=".activity.product.Product"
+            android:name=".activity.product.ProductListActivity"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:exported="false" >
         </activity>
         <activity
-            android:name=".activity.product.ProductDetails"
+            android:name=".activity.product.ProductDetailsActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
+            android:exported="false" >
+        </activity>
+        <activity
+            android:name=".activity.checkout.CheckoutActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
+            android:exported="false" >
+        </activity>
+
+        <activity android:name=".activity.RegisterActivity"
             android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:exported="false" >
         </activity>
